--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -2,17 +2,20 @@
 
             {% if user %}
                 <article class="item clearfix">
-                    <h2>{{ performance.title }} <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
+                    <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="{{ performance.id }}" data-title="">{{ performance.title }} </span>
+                        <span class="price">Price: from {{ performance.offerMinPrice|number_format(2, '.', ',') }} EUR</span>
                         <div class="editOffer"><i class="fa fa-pencil-square-o"></i></div>
+                        <div class="deleteOffer"><i class="fa fa-trash"></i></div>
                     </h2>
                     <span class="performanceId hidden">{{ performance.id }}</span>
                     {% for mediaOf in performance.media[0:1] %}
+                        <form action="/media/{{ mediaOf.id }}/edit" method="PATCH" class="dropzone">
+                        </form>
                         <img class="preview" src="{{ mediaOf.link }}" alt="Preview">
                     {% endfor %}
 
                     <div class="video">
                         {% for mediaOf in performance.media[1:2] %}
-
                             <img src="{{ mediaOf.link }}" alt="">
                             <span class="glyphicon glyphicon-play"></span>
 
