--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSection.html.twig
@@ -3,7 +3,7 @@
                 <div id="addNewPerformance"><i class="fa fa-plus"></i>Add new performance</div>
 
                 <article class="item clearfix addPerfomanceCreate emptyPerformance">
-                    <h2><span class="perfomanceTitleEdiatable"></span>
+                    <h2><span class="perfomanceTitleEdiatable" data-type="textarea" data-pk="" data-title="">Your performance title</span>
                         <span class="price">Price: from EUR</span>
                     </h2>
                     <span class="performanceId hidden"></span>
@@ -29,7 +29,7 @@
 
                     <div class="info">
                         <p class="perfomanceInfoEdiatable" data-type="textarea" data-pk="" data-title="">
-
+                            Your info text
                         </p>
 
                         <div class="controls">
