Frontend quick fixes + Commenting feeds section.

--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/feedsSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/feedsSection.html.twig
@@ -1,5 +1,5 @@
 <section class="profile-block social-media clearfix">
-    <div class="title"><span>My feed</span></div>
+    <!--div class="title"><span>My feed</span></div>
 
     <div class="col-xs-12 no-pad">
 
@@ -34,5 +34,5 @@
 
     <button class="show-more-info">
         Show More
-    </button>
+    </button-->
 </section>
