--- a/src/Acted/LegalDocsBundle/Resources/public/css/style.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/style.css
@@ -1969,13 +1969,13 @@ section.used-by {
 {
     float: left;
     position: relative;
-    text-align: left;
+    text-align: right;
 }
 #editAvatar
 {
     position: relative;
     color: #000;
-    font-size: 34px;
+    font-size: 28px;
 }
 .info #username
 {
@@ -1994,10 +1994,10 @@ section.used-by {
 }
 #editBackground
 {
-    font-size: 50px;
-    right: 0;
+    font-size: 35px;
+    right: 20px;
     position: absolute;
-    bottom: 130px;
+    top: 70px;
 }
 #editBiography
 {
@@ -2036,6 +2036,7 @@ section.used-by {
 #addNewPerformance
 {
     cursor: pointer;
+    margin-top: 30px;
 }
 .addPerfomanceCreate
 {
