--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -1,5 +1,6 @@
 
-<footer class="footer-dark">
+<!--<footer class="footer-dark">-->
+<footer>
     <div class="social-icons">
         <ul>
             <li><a href="#"><div class="icon facebook"></div></a></li>
