--- a/src/Acted/LegalDocsBundle/Resources/views/Default/index.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/index.html.twig
@@ -1,2 +1,4 @@
 
-    {% include 'ActedLegalDocsBundle:Default:menu.html.twig' %}
+{#{% include 'ActedLegalDocsBundle:Default:menu.html.twig' %}#}
+
+{% include 'ActedLegalDocsBundle:Default:home.html.twig' %}
