--- a/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/home.html.twig
@@ -16,6 +16,9 @@
 </div>
 
 <main class="home">
+    {{ dump() }}
+    {{ dump(homespotlight) }}
+
     {% include 'ActedLegalDocsBundle:Default:homeInstruction.html.twig' %}
 
     {% include 'ActedLegalDocsBundle:Default:spotlights.html.twig' %}
