--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/biographySection.html.twig
@@ -1,6 +1,6 @@
 <section id="biography" class="profile-block biography">
     {% if user %}
-    <div class="title"><span>Biography</span><div id="editBiography" class=""><a href="#"><i class="fa fa-pencil-square-o"></i></a></div></div>
+    <div class="title"><span>Biography</span><div id="editBiography" class=""><i class="fa fa-pencil-square-o"></i></div></div>
     <p id="biographyEditable" data-type="textarea" data-pk="{{ artist.id }}" data-title="">
         {{ artist.user.profile.description }}
     </p>
