--- a/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
@@ -4,6 +4,9 @@
             ARTISTS SPOTLIGHT
         </p>
 
+        {{ dump(homespotlight[0].media.link) }}
+        {{ dump(homespotlight[0].media.name) }}
+
         <div id="carousel">
             <div class="prev-control"><i class="right fa fa-3x fa-angle-left"></i></div>
 
