--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/mediaSection.html.twig
@@ -29,7 +29,7 @@
 
         <section class="media-content wrapper" id="section-photo">
             {% if user %}
-            <form action="/profile/{{ artist.slug }}/media/new" method="post" class="dropzone">
+            <form action="/profile/{{ artist.slug }}/media/new" method="post" class="dropzone" id="add-new-media-images">
             </form>
             {% endif %}
             <div class="slider-controls">
@@ -39,13 +39,14 @@
 
             <ul class="bxslider">
                 {% for photo in artist.user.profile.photoList %}
-                    <li><img src="{{ photo.link }}" alt="{{ photo.name }}"></li>
+                    <li id="imageSlider{{ photo.id }}"><img src="{{ photo.link }}" alt="{{ photo.name }}"></li>
                 {% endfor %}
             </ul>
 
             <div id="photo-pager" class="bx-pager">
                 {% for photo in artist.user.profile.photoList %}
                     <div class="scale-thumb thumb{{ loop.index }}">
+                        <span class="removeNewImage deleteMedia" id="{{ photo.id }}"><i class="fa fa-times-circle-o"></i></span>
                         <a data-slide-index="{{ loop.index0 }}" href=""><img src="{{ photo.link }}"/></a>
                     </div>
                 {% endfor %}
@@ -78,6 +79,7 @@
             <div id="video-pager" class="bx-pager">
                 {% for video in artist.user.profile.videoList %}
                     <div class="scale-thumb thumb{{ loop.index }}">
+                        <span class="removeNewImage deleteMedia" id="{{ video.id }}"><i class="fa fa-times-circle-o"></i></span>
                         <a data-slide-index="{{ loop.index0 }}" href=""><img id="{{ video.videoId }}" src="{{ video.thumbnail }}"/></a>
                     </div>
                 {% endfor %}
