--- a/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/header.html.twig
@@ -11,7 +11,12 @@
 <link rel="stylesheet" href="{{ asset('css/styles.css') }}" />
 </head>
 <body>
+
+{% if app.request.get('_route') == 'acted_legal_docs_homepage' %}
 <header class="home">
+    {% else %}
+    <header>
+{% endif %}
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
