--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -4609,3 +4609,14 @@ section.used-by {
     width: 20%;
     text-align: center;
 }
+.removeNewImage
+{
+    color: #d9534f;
+    font-size: 30px;
+    cursor: pointer;
+}
+span.removeNewImage
+{
+    position: absolute;
+    margin-left: 7px;
+}
