--- a/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/spotlights.html.twig
@@ -4,119 +4,24 @@
             ARTISTS SPOTLIGHT
         </p>
 
-        {{ dump(homespotlight[0].media.link) }}
-        {{ dump(homespotlight[0].media.name) }}
-
         <div id="carousel">
             <div class="prev-control"><i class="right fa fa-3x fa-angle-left"></i></div>
 
-            <div class="wrap">
-                <img src="assets/images/slider/1.jpg" alt="Image" />
+            {% for spotlight in homespotlight %}
 
-                <span class="glyphicon glyphicon-play"></span>
+            <div class="wrap">
+                <a href="/profile/{{ spotlight.media.profiles.first.user.artist.slug }}">
+                <img src="{{ spotlight.media.link }}" alt="{{ spotlight.media.name }}" />
+                </a>
+                <!--<span class="glyphicon glyphicon-play"></span>
 
                 <div class="caption-block">
                     <div class="name">
-                        <div class="text">Jazz vocalist</div>
+                        <div class="text"></div>
                     </div>
-                </div>
+                </div>-->
             </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/2.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/3.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/4.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/5.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/6.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/7.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/8.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="wrap">
-                <img src="assets/images/slider/9.jpg" alt="Image" />
-
-                <span class="glyphicon glyphicon-play"></span>
-
-                <div class="caption-block">
-                    <div class="name">
-                        <div class="text">Jazz vocalist</div>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
 
             <div class="next-control"><i class="right fa fa-3x fa-angle-right"></i></div>
         </div>
